Update working on section
Signed-off-by: Anastassios Nanos <ananos@nubificus.co.uk>

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ nav:
     link: "/"
   - name: "Short Bio"
     link: "/short-bio"
+  - name: "Resume"
+    link: "/ananos-cv-en-20210212.pdf"
   - name: "Contact"
     link: "/contact"
 
