Update company logos, fix colors
Signed-off-by: Anastassios Nanos <ananos@nubificus.co.uk>

--- a/_data/social-media.yml
+++ b/_data/social-media.yml
@@ -22,6 +22,12 @@ github:
   title: 'GitHub'
   fa-icon: 'fa-github-square'
 
+linkedin:
+  id: 'ananos'
+  href: 'https://www.linkedin.com/in/'
+  title: 'LinkedIn'
+  fa-icon: 'fa-linkedin-square'
+
 facebook:
   id: 'anastassiosnanos'
   href: 'https://www.facebook.com/'
